--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint": "^8.56.0"
   },
   "dependencies": {
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^2.1.0",
     "fastify": "^4.25.2"
   }
 }
